--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "source variables && npm run dev",
+    "build:ts": "tsc -p .",
+    "server": "node server/index.js",
+    "dev": "nodemon -e ts --dir server / --exec \"npm run build:ts && npm run server\""
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,8 @@
     "@types/node": "^8.0.46",
     "express": "^4.16.2",
     "typescript": "^2.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
